--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
+    "helmet": "^3.22.0",
     "mongoose": "^5.9.13",
     "xss-clean": "^0.1.1"
   },
